# retronic

./: README.md  pubspec.yaml
lib/: main.dart
native/hub/: Cargo.toml
native/hub/src/: app_state.rs  game_info_to_game_info_db.rs  lib.rs  tinic_super_event_listener.rs
native/hub/src/actors/: app_exit.rs  close_game.rs  load_game_actor.rs  macros.rs  mod.rs  need_download_src_actor.rs  start_tinic_ipc.rs  traits.rs
native/hub/src/actors/app/: exit_actor.rs  mod.rs  start_actor.rs
native/hub/src/actors/core/: install_core.rs  mod.rs
native/hub/src/actors/database/: get_recent_rom_actor.rs  identfier_roms_actor.rs  mod.rs  update_database_actor.rs
native/hub/src/actors/game/: close_game_actor.rs  load_game_actor.rs  mod.rs
native/hub/src/actors/info/: download_infos_actor.rs  get_campt_info_actor.rs  mod.rs
native/hub/src/ipc/: mod.rs  receive_output.rs  send_input.rs
native/hub/src/ipc/protocol/: out.rs
native/hub/src/signals/: generic.rs  mod.rs
native/hub/src/signals/dart_to_rust/: mod.rs  need_download_src_signal.rs
native/hub/src/signals/dart_to_rust/app/: mod.rs
native/hub/src/signals/dart_to_rust/core/: mod.rs
native/hub/src/signals/dart_to_rust/database/: mod.rs
native/hub/src/signals/dart_to_rust/game/: mod.rs
native/hub/src/signals/dart_to_rust/info/: mod.rs
native/hub/src/signals/rust_to_dart/: database.rs  extraction_signal.rs  mod.rs  need_download_src_signal.rs
native/hub/src/signals/rust_to_dart/app/: mod.rs
native/hub/src/signals/rust_to_dart/core/: mod.rs
native/hub/src/signals/rust_to_dart/device/: mod.rs
(+28 files in other folders)
