[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.2"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.8.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1.87"
messages = "0.3.1"
serde_json = "1.0.148"
# tinic-ipc-protocol = { git = "https://github.com/Xsimple1010/Tinic.git", version = "0.1.4" }
# tinic-super = { git = "https://github.com/Xsimple1010/Tinic", version = "0.1.4" }
# tinic-database = { git = "https://github.com/Xsimple1010/Tinic" }
tinic-super = { path = "../../../../RustroverProjects/Tinic/crates/tinic-super" }
tinic-database = { path = "../../../../RustroverProjects/Tinic/crates/tinic-database" }
tinic-ipc-protocol = { path = "../../../../RustroverProjects/Tinic/crates/tinic-ipc-protocol" }


# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
